2006-12-31 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:  Explicitly add freetype libs and flags when building
	cairo, in case the cairo config stuff has left them out.
	Should fix bug #18508
	* configure: regenerate

2006-12-30  Mark Tracy <tracy454@concentric.net>
	* Source/art/ReadRect.m (-GSReadRect:): incorporate offset into
	coordinate transformation calculations. Fixes bug #18260

2006-12-28  Matt Rice  <ratmice@gmail.com>

	* Source/x11/XGServerWindow.m (-flushwindowrect::): Don't convert 
	rect origin sent to handleExposeRect:forDriver: to int and back to
	float.

2006-12-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/cairo/CairoContext.m: declare XWindowBuffer class
	* configure.ac: disable glitz (if it cannot be found) in such a
	way that Cairo backend still builds/runs.
	* configure: regenerate

2006-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGGeneric.h: Added XGWMNetStates.
	* Source/x11/XGServerWindow.m (-_checkWindowManager,
	-setwindowlevel::): Prevent some window types from showing up in
	the taskbar for old window managers that cannot handle window types.
	Patch by Yen-Ju Chen <yjchenx@gmail.com>.
	
2006-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/XGCairoXImageSurface.h:
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:):  Use
	XWindowBuffer to draw on.
	* Source/cairo/CairoContext.m (+initializeBackend): Use
	XGCairoXImageSurface as surface. 
	* Source/cairo/CairoGState.m (-DPSimage:...:): Respect endianess,
	when creating a cairo image surface.
	Patch by Yen-Ju Chen <yjchenx@gmail.com>.
	
2006-12-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/XGCairoGlitzSurface.m (-initWithDevice:): Correct
	getting of visual ID. 
	Patch by: Xavier Glattard <xavier.glattard@free.fr>.
	
2006-12-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerEvent.m: Fix incorrect setting for second help
	key.
	* Documentation/Back/DefaultsSummary.gsdoc: Document mappings of
	X keys to help keys.
